2004-03-31  Marcus Brinkmann  <marcus@gnu.org>

	* slab.c (grow): Do not zero out memory returned by mmap with
	MAP_ANONYMOUS.  It already is zeroed.

2004-03-26  Johan Rydberg  <jrydberg@gnu.org>

        * slab.c (space_list): Remove variable.
        (list_lock): Likewise.
        (hurd_slab_reap): Remove function.
        (insert_space): Likewise.
        (hurd_slab_create): Do not call insert_space.  Delay
        initialization of slab to first allocation.
        (hurd_slab_destroy): Do not remove space from global list.
        (init_space): New function.
        (hurd_slab_dealloc): Assert that space is initialized.
        (hurd_slab_free): New function.
	(struct hurd_slab_space): Move from here ...
        * slab.h (struct hurd_slab_space): ... to here.
	(HURD_SLAB_SPACE_INITIALIZER): Defined.
        (hurd_slab_reap): Remove prototype.
	(hurd_slab_free): New prototype.

2004-03-25  Johan Rydberg  <jrydberg@gnu.org>

        * slab.c (grow): Release memory if constructor fails to initialize
        object.  Return error value from constructor.
        (reap): Make function static.  Do not take space lock.
        (hurd_slab_reap): Take space lock.
        (hurd_slab_destroy): Implement.

2004-03-21  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Add -I$(top_srcdir)/libc-parts for
	now.

	* slab.h (hurd_slab_destroy): New prototype.
	* slab.c (hurd_slab_destroy): Dummy implementation.

2003-10-11  Marcus Brinkmann  <marcus@gnu.org>

	* slab.h (hurd_slab_constructor_t): Add new HOOK argument.
	(hurd_slab_destructor_t): Likewise.
	(hurd_slab_create): Likewise.
	* slab.c (struct hurd_slab_space): New member HOOK.  Move member
	LOCK to beginning of struct.
	(grow): Call constructor with hook value.
	(reap): Call destructor with hook value.
	(hurd_slab_create): Add argument HOOK, initialize (*SPACE)->hook.


2003-09-17  Johan Rydberg  <jrydberg@night.trouble.net>

	* slab.h: Add alignment argument.
	* slab.c: Rewrittten.
